Added DOCTYPE and baseline CSS

--- a/webPlatformer.html
+++ b/webPlatformer.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
 <html>
-<canvas id="gameCanvas" width = "800" height = "600"></canvas>
 <body>
+<link rel="stylesheet" href="style.css">
+<canvas id="gameCanvas" width = "800" height = "600"></canvas>
+
 <script>
 	var canvas;
 	var canvasContext;
@@ -150,8 +153,7 @@
 	}
 </script>
 
-	<div>
-		</br>
+	<div>		
 		<a href="index.html">Back</a>
 	</div>
 	
